@@ -16,7 +16,7 @@ public class SoopPacket {
 
     public SoopPacket(String[] args) {
         this.dataList = new ArrayList<>(Arrays.asList(args));
-        String cmd = dataList.removeFirst();
+        String cmd = dataList.remove(0);
         this.command = cmd.substring(0, 4);
     }
 
